--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
+<!doctype html>
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title id="page-title">Oconim - Administration</title>
+    <title id="page-title">bauphilosophie.com</title>
 
     <link rel="shortcut icon" href="favicon.ico" />
     
     <link rel="stylesheet" type="text/css" href="extjs/resources/css/ext-all-neptune.css">
     <link rel="stylesheet" type="text/css" href="resources/css/bim.css">
     
-    <script type="text/javascript" src="extjs/ext-debug.js"></script>
+    <script type="text/javascript" src="extjs/ext-all.js"></script>
     <script type="text/javascript" src="app/Application.js"></script>
 </head>
 <body></body>
