--- a/index_debug.html
+++ b/index_debug.html
@@ -1,7 +1,8 @@
+<!doctype html>
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title id="page-title">Oconim - Administration</title>
+    <title id="page-title">bauphilosophie.com - Administration</title>
 
     <link rel="shortcut icon" href="favicon.ico" />
     
